# NarcissisticNumber

./: .gitignore  CMakeLists.txt  README.md  README.zh.md
python/: main.py  水仙花数.py
src/: CMakeLists.txt  NarNum.c  NarNum.h  main.c
